# stupid-file-serv

./: Install  README.md  run_server.sh  runserver.bat
.github/workflows/: rust.yml
cli-client/: Cargo.toml
cli-client/src/: main.rs
client/: button.js  index.html
flaskfs/: __init__.py
microservice/: flaskfs.py
prebuilt/aa64_android/: cli-client
prebuilt/x86_64-unknown-linux-gnu/: cli-client
test/: run_test.sh
