[package]
name = "cli-client"
version = "0.1.0"
authors = ["Fredrik Simonsson <simson@thesimson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
exitfailure = "0.5.1"
simple-error = "0.2"
reqwest = { version = "0.10", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
